--- a/config.json
+++ b/config.json
@@ -1,8 +1,9 @@
 {
     "name": "Corpos-Christie",
     "version": "0.0.6",
-    "tax": {
-        "2021": {
+    "tax": [
+        {
+            "year": 2021,
             "tranches": [
                 {
                     "min": 0,
@@ -30,25 +31,6 @@
                     "percentage": 45
                 }
             ]
-        },
-        "2020": {
-            "tranches": [
-                {
-                    "min": 2020,
-                    "max": 2020,
-                    "percentage": 2020
-                },
-                {
-                    "min": 2020,
-                    "max": 2020,
-                    "percentage": 2020
-                },
-                {
-                    "min": 2020,
-                    "max": 2020,
-                    "percentage": 2020
-                }
-            ]
         }
-    }
+    ]
 }
