Add tax metrics for 2019 and 2020

--- a/config.json
+++ b/config.json
@@ -29,6 +29,66 @@
                     "rate": 45
                 }
             ]
+        },
+        {
+            "year": 2020,
+            "tranches": [
+                {
+                    "min": 0,
+                    "max": 10064,
+                    "rate": 0
+                },
+                {
+                    "min": 10065,
+                    "max": 25659,
+                    "rate": 11
+                },
+                {
+                    "min": 25660,
+                    "max": 73369,
+                    "rate": 30
+                },
+                {
+                    "min": 73370,
+                    "max": 157806,
+                    "rate": 41
+                },
+                {
+                    "min": 157807,
+                    "max": 1000000,
+                    "rate": 45
+                }
+            ]
+        },
+        {
+            "year": 2019,
+            "tranches": [
+                {
+                    "min": 0,
+                    "max": 10064,
+                    "rate": 0
+                },
+                {
+                    "min": 10065,
+                    "max": 27794,
+                    "rate": 14
+                },
+                {
+                    "min": 27795,
+                    "max": 74517,
+                    "rate": 30
+                },
+                {
+                    "min": 74518,
+                    "max": 157806,
+                    "rate": 41
+                },
+                {
+                    "min": 157807,
+                    "max": 1000000,
+                    "rate": 45
+                }
+            ]
         }
     ]
 }
