Change type of rate float to string

--- a/config.json
+++ b/config.json
@@ -6,27 +6,27 @@
                 {
                     "min": 0,
                     "max": 10084,
-                    "rate": 0
+                    "rate": "0%"
                 },
                 {
                     "min": 10085,
                     "max": 25710,
-                    "rate": 11
+                    "rate": "11%"
                 },
                 {
                     "min": 25711,
                     "max": 73516,
-                    "rate": 30
+                    "rate": "30%"
                 },
                 {
                     "min": 73517,
                     "max": 158122,
-                    "rate": 41
+                    "rate": "41%"
                 },
                 {
                     "min": 158123,
                     "max": 1000000,
-                    "rate": 45
+                    "rate": "45%"
                 }
             ]
         },
@@ -36,27 +36,27 @@
                 {
                     "min": 0,
                     "max": 10064,
-                    "rate": 0
+                    "rate": "0%"
                 },
                 {
                     "min": 10065,
                     "max": 25659,
-                    "rate": 11
+                    "rate": "11%"
                 },
                 {
                     "min": 25660,
                     "max": 73369,
-                    "rate": 30
+                    "rate": "30%"
                 },
                 {
                     "min": 73370,
                     "max": 157806,
-                    "rate": 41
+                    "rate": "41%"
                 },
                 {
                     "min": 157807,
                     "max": 1000000,
-                    "rate": 45
+                    "rate": "45%"
                 }
             ]
         },
@@ -66,27 +66,27 @@
                 {
                     "min": 0,
                     "max": 10064,
-                    "rate": 0
+                    "rate": "0%"
                 },
                 {
                     "min": 10065,
                     "max": 27794,
-                    "rate": 14
+                    "rate": "14%"
                 },
                 {
                     "min": 27795,
                     "max": 74517,
-                    "rate": 30
+                    "rate": "30%"
                 },
                 {
                     "min": 74518,
                     "max": 157806,
-                    "rate": 41
+                    "rate": "41%"
                 },
                 {
                     "min": 157807,
                     "max": 1000000,
-                    "rate": 45
+                    "rate": "45%"
                 }
             ]
         }
