--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -2,9 +2,9 @@ name: Go
 
 on:
     push:
-        branches: [master]
+        branches: [develop, main]
     pull_request:
-        branches: [master]
+        branches: [develop, main]
 
 jobs:
     build:
